--- a/extension/background.html
+++ b/extension/background.html
@@ -6,10 +6,9 @@
     </head>
     <body>
       <script src="./lib/supabase-js.js"></script>
-      <script data-main="./background" src="./lib/require.js"></script>
-      <script src="./lib/main.js"></script>
-      <script src="./index.js" type="module"></script>
+      <script src="./lib/require.js"></script>
       <script src="./env.js"></script>
+      <!-- <script src="./lib/main.js"></script> -->
       <script src="./background.js"></script>
       <script src="./supabase.js"></script>
     </body>
